Fix for overlap demo on opera mini

--- a/grids-overlap-2/scss/styles.scss
+++ b/grids-overlap-2/scss/styles.scss
@@ -95,9 +95,14 @@ html {
 
   h2 {
     margin: auto;
-    transform: rotate(-15deg);
     color: #000;
     font-size: 150%;
+  }
+}
+
+@supports (transform: rotate(-15deg)) {
+  .card__content h2 {
+    transform: rotate(-15deg);
   }
 }
 
